Caffeine usage in :session fails with Graal
When we try to build a native image (since the unshading of caffeine), we get failures as caffeine uses a lot of
reflection.

This PR adds the minimum graal configuration for nativeTest to not simply fail in https://github.com/micronaut-projects/micronaut-core/pull/8116

--- a/session/build.gradle
+++ b/session/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 
     compileOnly project(":http-server")
     compileOnly project(":http-server-netty")
+    compileOnly libs.managed.graal
 
     implementation libs.managed.reactor
     implementation libs.caffeine
