--- a/test-suite-groovy/build.gradle
+++ b/test-suite-groovy/build.gradle
@@ -28,15 +28,9 @@ dependencies {
     testImplementation project(":function-web")
     testRuntimeOnly(platform(libs.boms.micronaut.aws))
     testRuntimeOnly libs.aws.java.sdk.lambda
+    testRuntimeOnly libs.bcpkix
 
     testImplementation libs.managed.reactor
 }
-
-//tasks.withType(Test).configureEach {
-//    testLogging {
-//        showStandardStreams = true
-//        exceptionFormat = 'full'
-//    }
-//}
 
 //compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
