--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -22,9 +22,6 @@ micronautBuild {
     }
 }
 
-apply from: "${rootProject.projectDir}/gradle/geb.gradle"
-apply from: "${rootProject.projectDir}/gradle/webdriverbinaries.gradle"
-
 dependencies {
     annotationProcessor project(":inject-java")
     api project(":inject")
@@ -56,6 +53,7 @@ dependencies {
         exclude module: 'micronaut-runtime'
     }
     testImplementation libs.managed.groovy.json
+    testImplementation libs.managed.groovy.templates
     // tag::testcontainers-dependencies[]
     testImplementation libs.testcontainers.spock
     // end::testcontainers-dependencies[]
@@ -91,6 +89,7 @@ dependencies {
 
     testFixturesApi libs.managed.spock
     testFixturesApi libs.managed.groovy
+    testFixturesApi libs.jetbrains.annotations
 }
 
 //tasks.withType(Test).configureEach {
