--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-library.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-library.gradle
@@ -2,6 +2,7 @@ plugins {
     id "io.micronaut.build.internal.base-module"
     id "io.micronaut.build.internal.convention-base"
     id "com.github.johnrengelman.shadow"
+    id "me.champeau.mrjar"
 }
 
 configurations {
@@ -27,4 +28,3 @@ micronautBuild {
         enabled.set(false)
     }
 }
-
