--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -75,11 +75,6 @@ dependencies {
     testImplementation libs.junit.jupiter.api
 }
 
-//tasks.withType(Test).configureEach {
-//    testLogging {
-//        showStandardStreams = true
-//        exceptionFormat = 'full'
-//    }
-//}
-
-//compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
+multiRelease {
+    targetVersions 17, 19
+}
