--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
@@ -47,11 +47,8 @@ tasks.withType(Jar).configureEach {
 }
 
 configurations.all {
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-        if (details.requested.group == 'org.codehaus.groovy') {
-            details.useTarget("org.apache.groovy:${details.requested.name}:${details.requested.version}")
-            details.because "Plugin 'io.micronaut.build.internal.common' isn't Groovy 4 yet and it's pulling in old versions"
-        }
+    resolutionStrategy.dependencySubstitution {
+        substitute(module("io.micronaut:micronaut-inject-groovy")).using(project(":inject-groovy"))
     }
 }
 
