HTTP Netty server executing route refactoring

--- a/core-reactive/build.gradle
+++ b/core-reactive/build.gradle
@@ -5,4 +5,5 @@ plugins {
 dependencies {
     api project(":core")
     api libs.managed.reactive.streams
+    implementation libs.managed.reactor
 }
