Fix the Hateoas/Groovy/Serde error in a binary compatible way
When trying to use Groovy and Serde and the default ErrorProcessor, Groovy
throws a ClassNotFound exception.

This fix adds a replacement for the HateoasErrorResponseProcessor that (if
groovy-runtime is on the classpath) doesn't use JacksonConfiguration.

It also deprecates the JacksonConfiguration constructor for removal in 4.0.0

Fixes #8184

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -413,6 +413,7 @@ log4j = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" 
 logbook-netty = { module = "org.zalando:logbook-netty", version.ref = "logbook-netty" }
 
 micronaut-docs = { module = "io.micronaut.docs:micronaut-docs-asciidoc-config-props", version.ref = "micronaut-docs" }
+micronaut-runtime-groovy = { module = "io.micronaut.groovy:micronaut-runtime-groovy", version.ref = "managed-micronaut-groovy" }
 
 mysql-driver = { module = "mysql:mysql-connector-java" }
 
