fix compilation errors

--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
         testImplementation libs.bcpkix
     }
-
+    testImplementation project(":jackson-databind")
 // Add Micronaut Jackson XML after v4 Migration
 //    testImplementation(libs.managed.micronaut.xml) {
 //        exclude module:'micronaut-inject'
