Don't relocate ASM references

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-library.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-library.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 configurations {
+    shadowCompile
     all {
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             String group = details.requested.group
