rename discovery to discovery-core to avoid conflict in BOM

--- a/http-client-core/build.gradle
+++ b/http-client-core/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 
     api project(":http")
     api project(":json-core")
-    api project(":discovery")
+    api project(":discovery-core")
 
     compileOnly libs.kotlin.stdlib
 
