--- a/retry/build.gradle
+++ b/retry/build.gradle
@@ -9,5 +9,5 @@ dependencies {
     api project(':core-reactive')
     implementation libs.managed.reactor
     testImplementation project(":jackson-databind")
-    testImplementation project(":discovery")
+    testImplementation project(":discovery-core")
 }
