--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     annotationProcessor project(":inject-java")
     annotationProcessor project(":graal")
     api project(':aop')
-    api project(':discovery')
+    api project(':discovery-core')
     api project(':health')
     api project(':context')
     api project(":core-reactive")
