--- a/settings.gradle
+++ b/settings.gradle
@@ -27,7 +27,7 @@ include "core"
 include "core-reactive"
 include "core-processor"
 include "context"
-include "discovery"
+include "discovery-core"
 include "function"
 include "function-client"
 include "function-web"
