disable predictive test selection temporarily

--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,4 @@ micronautSecurityVersion=3.8.1
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx1g
+predictiveTestSelection=false
