--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -110,14 +110,14 @@ managed-micronaut-picocli = "4.3.0"
 managed-micronaut-problem = "2.5.1"
 managed-micronaut-rabbitmq = "3.3.0"
 managed-micronaut-r2dbc = "4.0.0"
-managed-micronaut-reactor = "2.4.1"
+managed-micronaut-reactor = "3.0.0-SNAPSHOT"
 managed-micronaut-redis = "5.3.1"
 managed-micronaut-rss = "3.2.0"
 managed-micronaut-rxjava1 = "1.0.0"
 managed-micronaut-rxjava2 = "1.3.0"
 managed-micronaut-rxjava3 = "2.3.0"
 managed-micronaut-security = "3.8.1"
-managed-micronaut-serialization = "1.3.2"
+managed-micronaut-serialization = "2.0.0-SNAPSHOT"
 managed-micronaut-servlet = "3.3.2"
 managed-micronaut-spring = "4.3.1"
 managed-micronaut-sql = "4.7.2"
