Add snapshot repository for BOM check

--- a/bom/build.gradle
+++ b/bom/build.gradle
@@ -5,6 +5,11 @@ plugins {
 group projectGroupId
 version projectVersion
 
+repositories {
+    mavenCentral()
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 micronautBom {
     extraExcludedProjects = [
             "benchmarks",
