--- a/function/build.gradle
+++ b/function/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     api project(":http")
 
     testAnnotationProcessor project(":inject-java")
+    testImplementation project(":jackson-databind")
 }
