Disable predictive tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -58,3 +58,4 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx1g
 systemProp.predictiveTestSelection=false
+predictiveTestSelection=false
