build: Use serialization and reactor snapshots (#8266)

--- a/gradle.properties
+++ b/gradle.properties
@@ -57,4 +57,5 @@ micronautSecurityVersion=3.8.1
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx1g
+systemProp.predictiveTestSelection=false
 predictiveTestSelection=false
