Switch to using snapshot of micronaut-groovy
so we stop pulling old groovy in to the javadoc classpath

See https://ge.micronaut.io/s/pauiqojum325c/failure\#1 for example failure

--- a/http-server/build.gradle
+++ b/http-server/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id "io.micronaut.build.internal.convention-library"
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     api project(":http")
     api project(":router")
