--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id "io.micronaut.build.internal.convention-quality"
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 tasks.named("updateVersionCatalogs") {
     // we set the list to empty because we accept upgrades which improve the status
     rejectedQualifiers = []
