--- a/test-suite-kotlin/build.gradle
+++ b/test-suite-kotlin/build.gradle
@@ -12,6 +12,16 @@ micronautBuild {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven {
+        url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+        mavenContent {
+            snapshotsOnly()
+        }
+    }
+}
+
 dependencies {
     api libs.kotlin.stdlib
     api libs.kotlin.reflect
@@ -39,7 +49,8 @@ dependencies {
     testImplementation libs.managed.jcache
     testImplementation project(':validation')
     testImplementation project(":http-client")
-    testImplementation project(":session")
+    testImplementation(platform(libs.boms.micronaut.session))
+    testImplementation(libs.micronaut.session)
     testImplementation project(":jackson-databind")
     testImplementation libs.managed.groovy.templates
 
