--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -95,7 +95,7 @@ managed-micronaut-kafka = "4.4.1"
 managed-micronaut-kotlin = "3.2.2"
 managed-micronaut-kubernetes = "3.4.0"
 managed-micronaut-micrometer = "5.0.0-SNAPSHOT"
-managed-micronaut-microstream = "1.2.0"
+managed-micronaut-microstream = "2.0.0-SNAPSHOT"
 managed-micronaut-liquibase = "5.4.1"
 managed-micronaut-mongo = "4.6.0"
 managed-micronaut-mqtt = "2.3.0"
