--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -70,7 +70,7 @@ managed-maven-native-plugin = "0.9.13"
 managed-methvin-directory-watcher = "0.16.1"
 managed-micrometer = "1.9.5"
 managed-micronaut-acme = "3.2.0"
-managed-micronaut-aot = "1.1.1"
+managed-micronaut-aot = "2.0.0-SNAPSHOT"
 managed-micronaut-aws = "3.9.2"
 managed-micronaut-azure = "3.5.0"
 managed-micronaut-cache = "3.5.0"
