--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -73,7 +73,7 @@ managed-micronaut-acme = "3.2.0"
 managed-micronaut-aot = "2.0.0-SNAPSHOT"
 managed-micronaut-aws = "3.9.2"
 managed-micronaut-azure = "3.5.0"
-managed-micronaut-cache = "3.5.0"
+managed-micronaut-cache = "4.0.0-SNAPSHOT"
 managed-micronaut-cassandra = "5.1.1"
 managed-micronaut-coherence = "3.7.1"
 managed-micronaut-crac = "1.0.1"
