--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -86,7 +86,7 @@ managed-micronaut-gcp = "4.6.0"
 managed-micronaut-graphql = "3.2.0"
 managed-micronaut-groovy = "4.0.0-SNAPSHOT"
 managed-micronaut-grpc = "3.3.1"
-managed-micronaut-hibernate-validator = "3.2.0"
+managed-micronaut-hibernate-validator = "4.0.0-SNAPSHOT"
 managed-micronaut-ignite = "1.0.0.RC1"
 managed-micronaut-jaxrs = "3.4.0"
 managed-micronaut-jms = "2.1.0"
