--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -106,7 +106,7 @@ managed-micronaut-netflix = "2.1.0"
 managed-micronaut-object-storage = "1.1.0"
 managed-micronaut-openapi = "4.5.2"
 managed-micronaut-oraclecloud = "2.2.1"
-managed-micronaut-picocli = "4.3.0"
+managed-micronaut-picocli = "5.0.0-SNAPSHOT"
 managed-micronaut-problem = "2.5.1"
 managed-micronaut-rabbitmq = "3.3.0"
 managed-micronaut-r2dbc = "4.0.0"
