--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -114,7 +114,7 @@ managed-micronaut-reactor = "3.0.0-SNAPSHOT"
 managed-micronaut-redis = "5.3.1"
 managed-micronaut-rss = "3.2.0"
 managed-micronaut-rxjava1 = "1.0.0"
-managed-micronaut-rxjava2 = "1.3.0"
+managed-micronaut-rxjava2 = "2.0.0-SNAPSHOT"
 managed-micronaut-rxjava3 = "2.3.0"
 managed-micronaut-security = "3.8.1"
 managed-micronaut-serialization = "2.0.0-SNAPSHOT"
