micronaut-rxjava3 [skip ci]

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -115,7 +115,7 @@ managed-micronaut-redis = "5.3.1"
 managed-micronaut-rss = "3.2.0"
 managed-micronaut-rxjava1 = "1.0.0"
 managed-micronaut-rxjava2 = "2.0.0-SNAPSHOT"
-managed-micronaut-rxjava3 = "2.3.0"
+managed-micronaut-rxjava3 = "3.0.0-SNAPSHOT"
 managed-micronaut-security = "3.8.1"
 managed-micronaut-serialization = "2.0.0-SNAPSHOT"
 managed-micronaut-servlet = "3.3.2"
