--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -123,7 +123,7 @@ managed-micronaut-spring = "4.3.1"
 managed-micronaut-sql = "4.7.2"
 managed-micronaut-test = "3.7.0"
 managed-micronaut-test-resources = "1.1.3"
-managed-micronaut-toml = "1.1.1"
+managed-micronaut-toml = "2.0.0-SNAPSHOT"
 managed-micronaut-tracing = "4.4.0"
 managed-micronaut-tracing-legacy = "3.2.7"
 managed-micronaut-views = "3.7.1"
