--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -70,10 +70,10 @@ managed-maven-native-plugin = "0.9.13"
 managed-methvin-directory-watcher = "0.16.1"
 managed-micrometer = "1.9.5"
 managed-micronaut-acme = "3.2.0"
-managed-micronaut-aot = "1.1.1"
+managed-micronaut-aot = "2.0.0-SNAPSHOT"
 managed-micronaut-aws = "3.9.2"
 managed-micronaut-azure = "3.5.0"
-managed-micronaut-cache = "3.5.0"
+managed-micronaut-cache = "4.0.0-SNAPSHOT"
 managed-micronaut-cassandra = "5.1.1"
 managed-micronaut-coherence = "3.7.1"
 managed-micronaut-crac = "1.0.1"
@@ -86,7 +86,7 @@ managed-micronaut-gcp = "4.6.0"
 managed-micronaut-graphql = "3.2.0"
 managed-micronaut-groovy = "4.0.0-SNAPSHOT"
 managed-micronaut-grpc = "3.3.1"
-managed-micronaut-hibernate-validator = "3.2.0"
+managed-micronaut-hibernate-validator = "4.0.0-SNAPSHOT"
 managed-micronaut-ignite = "1.0.0.RC1"
 managed-micronaut-jaxrs = "3.4.0"
 managed-micronaut-jms = "2.1.0"
@@ -94,8 +94,8 @@ managed-micronaut-jmx = "3.1.0"
 managed-micronaut-kafka = "4.4.1"
 managed-micronaut-kotlin = "3.2.2"
 managed-micronaut-kubernetes = "3.4.0"
-managed-micronaut-micrometer = "4.6.1"
-managed-micronaut-microstream = "1.2.0"
+managed-micronaut-micrometer = "5.0.0-SNAPSHOT"
+managed-micronaut-microstream = "2.0.0-SNAPSHOT"
 managed-micronaut-liquibase = "5.4.1"
 managed-micronaut-mongo = "4.6.0"
 managed-micronaut-mqtt = "2.3.0"
@@ -106,7 +106,7 @@ managed-micronaut-netflix = "2.1.0"
 managed-micronaut-object-storage = "1.1.0"
 managed-micronaut-openapi = "4.5.2"
 managed-micronaut-oraclecloud = "2.2.1"
-managed-micronaut-picocli = "4.3.0"
+managed-micronaut-picocli = "5.0.0-SNAPSHOT"
 managed-micronaut-problem = "2.5.1"
 managed-micronaut-rabbitmq = "3.3.0"
 managed-micronaut-r2dbc = "4.0.0"
@@ -114,8 +114,8 @@ managed-micronaut-reactor = "3.0.0-SNAPSHOT"
 managed-micronaut-redis = "5.3.1"
 managed-micronaut-rss = "3.2.0"
 managed-micronaut-rxjava1 = "1.0.0"
-managed-micronaut-rxjava2 = "1.3.0"
-managed-micronaut-rxjava3 = "2.3.0"
+managed-micronaut-rxjava2 = "2.0.0-SNAPSHOT"
+managed-micronaut-rxjava3 = "3.0.0-SNAPSHOT"
 managed-micronaut-security = "3.8.1"
 managed-micronaut-serialization = "2.0.0-SNAPSHOT"
 managed-micronaut-servlet = "3.3.2"
@@ -123,11 +123,11 @@ managed-micronaut-spring = "4.3.1"
 managed-micronaut-sql = "4.7.2"
 managed-micronaut-test = "3.7.0"
 managed-micronaut-test-resources = "1.1.3"
-managed-micronaut-toml = "1.1.1"
+managed-micronaut-toml = "2.0.0-SNAPSHOT"
 managed-micronaut-tracing = "4.4.0"
 managed-micronaut-tracing-legacy = "3.2.7"
 managed-micronaut-views = "3.7.1"
-managed-micronaut-xml = "3.1.0"
+managed-micronaut-xml = "4.0.0-SNAPSHOT"
 managed-neo4j = "3.5.35"
 managed-neo4j-java-driver = "4.4.9"
 managed-netty = "4.1.84.Final"
